--- a/css/style.css
+++ b/css/style.css
@@ -405,7 +405,7 @@ body {
 
 /* form */
 .Form {
-    width: 100%;
+/*     width: 100%; */
     height: 30vh;
     background-color: rgb(173, 169, 169);
     position: absolute;
@@ -415,9 +415,11 @@ body {
     align-items: center;
     transform: translateX(100%);
     transition: .5s;
+    visibility:hidden;
 }
 
 .active {
+    visibality:visible;
     pointer-events: auto;
     /* opacity: 1; */
     display: block;
