--- a/css/style.css
+++ b/css/style.css
@@ -405,12 +405,10 @@ body {
 
 /* form */
 .Form {
-/*     width: 100%; */
-    height: 30vh;
+    width: 100%;
     background-color: rgb(173, 169, 169);
     position: absolute;
-    right: 0px;
-    /* display: flex; */
+    display: flex;
     justify-content: center;
     align-items: center;
     transform: translateX(100%);
@@ -421,10 +419,7 @@ body {
 .active {
     visibility:visible;
     pointer-events: auto;
-    /* opacity: 1; */
-    display: block;
     transform: translateX(0%);
-
 }
 
 /* contact section end */
